--- a/app/styles/scss/settings/_gaia-overwrites.scss
+++ b/app/styles/scss/settings/_gaia-overwrites.scss
@@ -1,9 +1,5 @@
 /* gaia overwrites & adaptions */
 
-.index {
-    height: 100%;
-}
-
 [role='dialog'][data-type='action'] {
     overflow-y: scroll;
     
